fixed a few html/contrast errors

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     display: none;
 }
 
-header.js-hide {
+.home.js-hide {
     display: none;
 }
 
@@ -64,16 +64,12 @@ nav {
     z-index: 1;
 }
 
-.icon {
+.hello {
     height: 32px;
     width: 32px;
-}
-
-.icon img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    filter: grayscale(100%);
+    display: flex;
+    align-items: center;
+    font-size: 24px;
 }
 
 .hamburger {
@@ -91,7 +87,7 @@ nav {
     border-top: 1px solid rgba(0, 0, 0, .05);
 }
 
-.nav-list a:hover {
+nav a:hover {
     font-weight: bold;
     color: #00d9ff;
 }
@@ -100,7 +96,7 @@ nav {
     height: 32px;    
 }
 
-header, section {
+section {
     min-height: 100vh;
     padding: 100px 0;
 }
@@ -140,7 +136,7 @@ p, .projects a, .contact a {
     padding: 0 5vw;
 }
 
-header p {
+.home p {
     text-align: center;
     font-size: 24px;
     line-height: 24px;
@@ -185,13 +181,14 @@ section .container {
     right: 0;
 }
 
-.about img, .screenshot-medium, .screenshot-wide, footer {
+.about img, .screenshot-medium, .screenshot-wide {
     display: none;
 }
 
 .highlight-green {
-    color: #00bb7d;
+    border: solid 2px #00bb7d;
     font-weight: bold;
+    padding: 1px 5px;
 }
 
 .highlight-blue {
@@ -275,7 +272,6 @@ a:link, a:visited {
     }
 
     .nav-list a {
-        font-size: 18px;
         margin-top: unset;
         padding: 0 20px;
         border-top: unset;
@@ -367,22 +363,24 @@ a:link, a:visited {
         height: 100%;
     }
 
-    .nav-list a {
+    .nav-list a, nav a {
         margin: 25px 0;
+        font-size: 36px;
         padding: 0;
     }
 
     nav {
+        flex-direction: column;
+        align-items: unset;
         top: 0;
         left: 0;
         right: unset;
         bottom: 0;
-        padding: 0 10px;
         background: unset;
     }
 
     .home p {
-        font-size: 56px;
+        font-size: 42px;
         line-height: 60px;
     }
 
@@ -427,5 +425,14 @@ a:link, a:visited {
     
     .js-hide {
         display: none;
+    }
+
+    .home {
+        padding-left: 150px;
+        padding-right: 30px;
+    }
+
+    section {
+        padding-left: 150px;
     }
 }
